// Copyright 2024 Audiotool Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package audiotool.audiograph.v1;

import "audiotool/audiograph/v1/audiograph.proto";
import "google/api/field_behavior.proto";

// The audiograph service definition.
service AudiographService {
  // Get Audiographs
  rpc GetAudiographs(GetAudiographsRequest) returns (GetAudiographsResponse) {}
}

// Resolution of the audiograph to safe on bandwidth.
enum GetAudiographResolution {
  // Unspecified resolution.
  GET_AUDIOGRAPH_RESOLUTION_UNSPECIFIED = 0;

  // 120 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_120 = 120;

  // 240 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_240 = 240;

  // 480 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_480 = 480;

  // 960 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_960 = 960;

  // 1920 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_1920 = 1920;

  // 3840 pixels resolution.
  GET_AUDIOGRAPH_RESOLUTION_3840 = 3840;
}

// Channels of the audiograph the client is interested in (to safe on bandwidth).
enum GetAudiographChannels {
  // Unspecified channels.
  GET_AUDIOGRAPH_CHANNELS_UNSPECIFIED = 0;

  // Mono channel audiograph. Stereo channels will be calculated of the two channels.
  GET_AUDIOGRAPH_CHANNELS_MONO = 1;

  // Stereo channel output.
  GET_AUDIOGRAPH_CHANNELS_STEREO = 2;
}

// Request for AudiographService.GetAudiograph
message GetAudiographsRequest {
  // Required. The name of the audiograph to retrieve.
  //
  // This can be a track or a sample entities resource name.
  repeated string resource_names = 1 [(google.api.field_behavior) = REQUIRED];

  // The maximum resolution of the audiograph the client is interested in.
  //
  // The client is  not guaranteed to get the exact resolution requested, but you will get the
  // closest.
  GetAudiographResolution resolution = 2;

  // The number of channels the client is interested in.
  GetAudiographChannels channels = 3;
}

// Response for AudiographService.GetAudiograph
message GetAudiographsResponse {
  // The audiograph data.
  repeated Audiograph audiographs = 1;
}
